# picture_comparator_poc

./: README.md  discrepancy_explainer.py  image_loader.py  logger.py  model.py  picture_comparator_poc.py  pyproject.toml  test_explainer.py
doc/: DESIGN.md  PROMPTFOO_TESTING.md
