[project]
name = "picture-comparator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "langchain>=0.1.0",
    "langchain-aws>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-core>=0.1.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "typing-extensions>=4.9.0",
]
